# atlas

./: .dockerignore  .gitignore  Dockerfile  README.md  atlas.py  config.py  delete-logs.sh  docker-compose.yml  pyproject.toml  requirements.txt  startup-manual-certs.sh  wsgi.py
.github/workflows/: build.yml  build_app.yml  build_infrastructure.yml  cleanup_dev.yml  deploy.yml  remove_data_infra.yml  remove_dev_infra.yml  run_data_pipeline.yml  run_data_pipeline_copper.yml  run_data_pipeline_full.yml  run_data_pipeline_iron.yml  run_data_pipeline_staging.yml
data/: country_lookup.csv  data_paths.py  data_processing_lakehouse.py  process_copper.py  process_iron.py  process_staging.py  snapshot_titanium.py
data/data_snapshot/meta/: master_meta.parquet
data_lakehouse/staging/: meta.7z
data_lakehouse/staging/statistics/: big-mac-index.7z  experimental.7z  gapminder-fast-track.7z  undata.7z  world-standards-unofficial-website.7z
data_lakehouse/titanium/meta/: master_config.csv  master_meta.parquet  (+1 more)
flask_app/: __init__.py  dash_app (backup 6 Oct 2024. Blob access working).7z  routes.py
flask_app/dash_app/: app.py  app_old.py  appv2.py  dash_html.py  data.py  data_paths.py  data_processing_lakehouse.py  data_processing_runtime.py  global_constants.py  modal_text.py
flask_app/templates/: dash.jinja2  layout.jinja2
infrastructure/azure-deploy/: create-vm.bicep  setup-vm.sh
infrastructure/nginx/: nginx.conf
src/containers/: startup-generate-certs.sh
src/data_pipeline/: process_copper.py  process_staging.py  snapshot_titanium.py
src/flask_app/: __init__.py
(+37 files in other folders)
