[project]
name = "McAppFace"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    # APP
    "python-dotenv==1.0.1",
    "azure-storage-blob==12.24.1",    
    "pandas==2.2.3",
    "matplotlib==3.10.0",
    "dataclasses==0.6",
    "pyarrow==19.0.1",
    "dash==2.18.2",
    "dash-bootstrap-components==1.7.1",
    "gunicorn==23.0.0", 
    #kaleido==0.2.1 #pdf export
    #dash-deck==0.0.1
    #pydeck==0.4.1 #Had to lock this as updates are breaking. Might be cool new features though.
    #dash-extensions==0.0.58 #Download features
    #xlrd==1.2.0
    #xlsxwriter==1.4.4
    
    # DATA PIPELINE
    #openpyxl==3.1.5 #Needed for opening xlsx files using pandas.    
]
